--- a/doc/cie/macros.tex
+++ b/doc/cie/macros.tex
@@ -80,6 +80,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Macros for input & output language
 
+\newcommand{\f}[1]{\mathtt{#1}}
+
 % ASCII syntax
 \iffalse
 \newcommand{\ip}{p}
@@ -198,24 +200,26 @@
 \newcommand{\oTY}{T} % type name
 \newcommand{\oprod}[2]{#1 \times #2} % product
 \newcommand{\oarrow}[2]{#1 \to #2} % arrow
-\newcommand{\ounit}{\mathsf{unit}} % unit type
+\newcommand{\ounit}{\mathtt{unit}} % unit type
 \newcommand{\oselect}[2]{#1{.}#2}  % projection from a module
-\newcommand{\osumty}[4]{`#1\,\mathsf{of}\,#2 + \cdots + `#3\,\mathsf{of}\,#4}
-\newcommand{\osumtyx}[4]{`#1\,\mathsf{of}\,#2 + `#3\,\mathsf{of}\,#4}
+\newcommand{\osumty}[4]{`#1\,\mathtt{of}\,#2 + \cdots + `#3\,\mathtt{of}\,#4}
+\newcommand{\osumtyx}[4]{`#1\,\mathtt{of}\,#2 + `#3\,\mathtt{of}\,#4}
 \newcommand{\ol}{l} % label
 %%%% terms
 \renewcommand{\oe}{e} % expression
 \newcommand{\ox}{x} % variable
-\newcommand{\olambda}[3]{\mathsf{fun}\,#1{:}#2 \to #3} % abstraction
+\newcommand{\olambda}[3]{\mathtt{fun}\,#1{:}#2 \to #3} % abstraction
 \newcommand{\oapp}[2]{#1\,#2} % application
 \newcommand{\otuple}[2]{(#1,\ldots,#2)} % tuple
-\newcommand{\oproj}[2]{\mathsf{p}_{#2}\,#1} % projection
+\newcommand{\oproj}[2]{\mathtt{p}_{#2}\,#1} % projection
 \newcommand{\oinj}[2]{`#1\,#2} % sum injection
-\newcommand{\omatch}[7]{\mathsf{match}\,#1\,\mathsf{with}\,\oinj{#2}{#3}\to{#4}\obar\oinj{#5}{#6}\to{#7}}
-\newcommand{\omatches}[7]{\mathsf{match}\,#1\,\mathsf{with}\,\oinj{#2}{#3}\to{#4}\,|\cdots\,|\oinj{#5}{#6}\to{#7}}
-\newcommand{\ooblig}[4]{\mathsf{assure}\,#1{:}#2.\,#3\,\mathsf{in}\,#4}
-\newcommand{\oobligx}[2]{\mathsf{assure}\,#1\,\mathsf{in}\,#2}
-\newcommand{\olet}[3]{\mathsf{let}\,#1{=}#2\,\mathsf{in}\,#3}
+\newcommand{\oinjx}[1]{`#1} % sum injection
+\newcommand{\omatch}[7]{\mathtt{match}\,#1\,\mathtt{with}\,\oinj{#2}{#3}\to{#4}\obar\oinj{#5}{#6}\to{#7}}
+\newcommand{\omatchx}[5]{\mathtt{match}\,#1\,\mathtt{with}\,\oinjx{#2}\to{#3}\obar\oinjx{#4}\to{#5}}
+\newcommand{\omatches}[7]{\mathtt{match}\,#1\,\mathtt{with}\,\oinj{#2}{#3}\to{#4}\,|\cdots\,|\oinj{#5}{#6}\to{#7}}
+\newcommand{\ooblig}[4]{\mathtt{assure}\,#1{:}#2.\,#3\,\mathtt{in}\,#4}
+\newcommand{\oobligx}[2]{\mathtt{assure}\,#1\,\mathtt{in}\,#2}
+\newcommand{\olet}[3]{\mathtt{let}\,#1{=}#2\,\mathtt{in}\,#3}
 %%%% propositions
 \newcommand{\op}{p} % proposition
 \newcommand{\oP}{P} % atomic proposition
@@ -225,8 +229,9 @@
 \newcommand{\oand}[2]{#1 \land #2} % and
 \newcommand{\oimply}[2]{#1 \Rightarrow #2} % imply
 \newcommand{\oiff}[2]{#1 \Leftrightarrow #2} % iff
-\newcommand{\opcase}[7]{\mathsf{match}\,#1\,\mathsf{with}\,\oinj{#2}{#3}{\Rightarrow}{#4}\,|\,\oinj{#5}{#6}\Rightarrow{#7}}
-\newcommand{\opcases}[7]{\mathsf{match}\,#1\,\mathsf{with}\,\oinj{#2}{#3}\Rightarrow{#4}\,|\cdots\,|\oinj{#5}{#6}\Rightarrow{#7}}
+\newcommand{\opcase}[7]{\mathtt{match}\,#1\,\mathtt{with}\,\oinj{#2}{#3}{\Rightarrow}{#4}\,|\,\oinj{#5}{#6}\Rightarrow{#7}}
+\newcommand{\opcasex}[5]{\mathtt{match}\,#1\,\mathtt{with}\,\oinjx{#2}{\Rightarrow}{#3}\,|\,\oinjx{#4}\Rightarrow{#5}}
+\newcommand{\opcases}[7]{\mathtt{match}\,#1\,\mathtt{with}\,\oinj{#2}{#3}\Rightarrow{#4}\,|\cdots\,|\oinj{#5}{#6}\Rightarrow{#7}}
 \newcommand{\ototal}[2]{#1{:}\support{#2}} % support membership
 \newcommand{\oper}[3]{#2\,{\approx_{#1}}\,#3} % per
 \newcommand{\oequal}[2]{#1{=}#2} % observational equality
@@ -240,22 +245,22 @@
 \newcommand{\oM}{M} % module name
 %%% Proposition kinds
 \newcommand{\opt}{\Pi}
-\newcommand{\oProp}{\mathsf{bool}}
+\newcommand{\oProp}{\mathtt{bool}}
 %%% Module type elements
 \newcommand{\ote}{\theta}
-\newcommand{\ovalspec}[2]{\mathsf{val}\;#1:#2}
-\newcommand{\otyspec}[1]{\mathsf{type}\;#1}
-\newcommand{\otydef}[2]{\mathsf{type}\;#1=#2}
-\newcommand{\omodulespec}[2]{\mathsf{module}\;#1:#2}
-\newcommand{\osignatdef}[2]{\mathsf{module}\;\mathsf{type}\,#1=#2}
-\newcommand{\opropspec}[2]{\mathsf{predicate}\; #1:#2}
-\newcommand{\oassertion}[2]{\mathsf{assertion}\; #1 : #2}
+\newcommand{\ovalspec}[2]{\mathtt{val}\;#1:#2}
+\newcommand{\otyspec}[1]{\mathtt{type}\;#1}
+\newcommand{\otydef}[2]{\mathtt{type}\;#1=#2}
+\newcommand{\omodulespec}[2]{\mathtt{module}\;#1:#2}
+\newcommand{\osignatdef}[2]{\mathtt{module}\;\mathtt{type}\,#1=#2}
+\newcommand{\opropspec}[2]{\mathtt{predicate}\; #1:#2}
+\newcommand{\oassertion}[2]{\mathtt{assertion}\; #1 : #2}
 \newcommand{\oA}{A} % Assertion name
 %%% Module type
 \newcommand{\omt}{\Sigma}
 \newcommand{\oMT}{S}
-\newcommand{\osig}[1]{\mathsf{sig}\,#1\,\mathsf{end}}
-\newcommand{\ofunctor}[3]{\mathsf{functor}\, (#1{:}#2) \to #3}
+\newcommand{\osig}[1]{\mathtt{sig}\,#1\,\mathtt{end}}
+\newcommand{\ofunctor}[3]{\mathtt{functor}\, (#1{:}#2) \to #3}
 
 %%% Local Variables: 
 %%% mode: latex
